--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGODB_URI = 
-MONGODB_DB = 
-MONGODB_COLLECTION = 
+MONGODB_URI = mongodb+srv://proj-0-admin-0:<password>@cl
+uster0.6mz2g.mongodb.net/?retryWrites=true&w=majority
+MONGODB_DB = sample_mflix
+MONGODB_COLLECTION = movie
